# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.436 2005/10/24 04:34:43 agaffney Exp $

*GLI-0.3 (17 Oct 2005)

  23 Oct 2005; Preston Cody <codeman@gentoo.org>
  DEBUGGING ADDED TO AT.  verbose field added to CConfig.
  
  23 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  / maps to index.html
  look for actual files in html/
  src/net/html:
  new template
  src/GLIUtility.py:
  added parse_vdb_contents()
  src/GLIArchitectureTemplate.py:
  added copy_pkg_to_chroot()
  added debug code to dynamic-stage3
  switch dynamic-stage3 to new method
  lots of bug fixes from adding debug code

  22 Oct 2005; Preston Cody <codeman@gentoo.org>
  webgli initial bootloader support + changed make.conf.
  IP: changed defaults for stage, kernel_build_method, kernel_source_pkg.
  
  20 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  horrible tangled mess of code that is tarball unpacking subprogress display
  add unpack progress to portage snapshot
  use read() instead of readlines() in spawn()
  only update progress bar for whole percents

  19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  change call to 'grub' to use GLIUtility.exitsuccess()
  add definition of 'build_mode' in _configure_lilo()
  src/misc/updategtkfe, src/misc/updateglid:
  fix so subshell is called in root shell

  18 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  stage screen launches URI browser in sized window with various properties set

*GLI-0.2 (17 Oct 2005)

  17 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/misc/updategtkfe:
  updated to actually work
  remove previous snapshot and extracted dir before downloading
  src/misc/updateglid:
  updated to actually work
  src/templates/x86ArchitectureTemplate.py: