@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.217 2005/10/24 04:34:43 agaffney Exp $
+$Id: GLIArchitectureTemplate.py,v 1.218 2005/10/24 21:31:18 agaffney Exp $
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
 interface (yes, it is both at the same time!). The purpose of this is to create 
@@ -175,19 +175,29 @@ class ArchitectureTemplate:
 		if not GLIUtility.exitsuccess(GLIUtility.spawn("env ROOT=" + self._chroot_dir + " ebuild " + self._chroot_dir + "/var/db/pkg/" + package + "/*.ebuild preinst")):
 			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not execute preinst for " + package)
 		entries = GLIUtility.parse_vdb_contents("/var/db/pkg/" + package + "/CONTENTS")
-		for entry in entries:
-			parts = entry.split(" ")
-			if len(parts) == 3 and parts[1] == "->":
+		try:
+			tarfiles = open("/tmp/tarfilelist", "w")
+			for entry in entries:
+				parts = entry.split(" ")
+				if not parts[0].endswith("/"):
+					tarfiles.write(parts[0] + "\n")
+			tarfiles.close()
+		except:
+			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not create filelist for " + package)
+#			if len(parts) == 3 and parts[1] == "->":
 #				if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): running 'ln -s " + parts[2] + " " + self._chroot_dir + parts[0] + "'")
-				if not GLIUtility.exitsuccess(GLIUtility.spawn("ln -s " + parts[2] + " " + self._chroot_dir + parts[0])):
-					raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not create a link from " + parts[0] + " to " + parts[2])
-			elif parts[0].endswith("/"):
+#				if not GLIUtility.exitsuccess(GLIUtility.spawn("ln -s " + parts[2] + " " + self._chroot_dir + parts[0])):
+#					raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not create a link from " + parts[0] + " to " + parts[2])
+#			elif parts[0].endswith("/"):
 #				if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): creating directory " + parts[0])
-				GLIUtility.spawn("mkdir -p " + self._chroot_dir + parts[0])
-			else:
+#				GLIUtility.spawn("mkdir -p " + self._chroot_dir + parts[0])
+#			else:
 #				if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): copying file " + parts[0])
-				if not GLIUtility.exitsuccess(GLIUtility.spawn("cp -a " + parts[0] + " " + self._chroot_dir + parts[0])):
-					self._logger.log("DEBUG: copy_pkg_to_chroot(): Could not copy " + parts[0] + "...continuing")
+#				if not GLIUtility.exitsuccess(GLIUtility.spawn("cp -a " + parts[0] + " " + self._chroot_dir + parts[0])):
+#					self._logger.log("DEBUG: copy_pkg_to_chroot(): Could not copy " + parts[0] + "...continuing")
+		if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): running 'tar -c --files-from=/tmp/tarfilelist --no-recursion 2>/dev/null | tar -C " + self._chroot_dir + " -x'")
+		if not GLIUtility.exitsuccess(GLIUtility.spawn("tar -c --files-from=/tmp/tarfilelist --no-recursion 2>/dev/null | tar -C " + self._chroot_dir + " -x")):
+			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not execute tar for " + package)
 		if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): running postinst for " + package)
 		if not GLIUtility.exitsuccess(GLIUtility.spawn("env ROOT=" + self._chroot_dir + " ebuild " + "/var/db/pkg/" + package + "/*.ebuild postinst")):
 			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not execute postinst for " + package)
@@ -363,10 +373,11 @@ class ArchitectureTemplate:
 			modules-update
 			[ -f /usr/bin/binutils-config ] && binutils-config 1
 			source /etc/profile
-			mount -t proc none /proc
-			cd /dev
-			/sbin/MAKEDEV generic-i386
-			umount /proc
+			#mount -t proc none /proc
+			#cd /dev
+			#/sbin/MAKEDEV generic-i386
+			#umount /proc
+			[ -f /lib/udev-state/devices.tar.bz2 ] && tar -C /dev -xjf /lib/udev-state/devices.tar.bz2
 			"""
 			script = open(self._chroot_dir + "/tmp/extrastuff.sh", "w")
 			script.write(chrootscript)
