@@ -1,9 +1,14 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.436 2005/10/24 04:34:43 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.437 2005/10/24 21:31:18 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  24 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIArchitectureTemplate.py:
+  use tar | tar to copy files in copy_pkg_to_chroot()
+  extract devices.tar.bz2 created by baselayout instead of running MAKEDEV
 
   23 Oct 2005; Preston Cody <codeman@gentoo.org>
   DEBUGGING ADDED TO AT.  verbose field added to CConfig.
